--- a/index.html
+++ b/index.html
@@ -110,22 +110,22 @@
 
         <div class="boxes">
             <div class="experience__column">
-                <div class="box img-category1">
+                <div class="box img-category-1">
                     <div class="box__category">Mountain</div>
                 </div>
             </div>
             <div class="experience__column">
-                <div class="box img-category2">
+                <div class="box img-category-2">
                     <div class="box__category">Waterfall</div>
                 </div>
             </div>
             <div class="experience__column">
-                <div class="box img-category3">
+                <div class="box img-category-3">
                     <div class="box__category">Snow</div>
                 </div>
             </div>
             <div class="experience__column">
-                <div class="box img-category4">
+                <div class="box img-category-4">
                     <div class="box__category">Nature</div>
                 </div>
             </div>
@@ -136,17 +136,15 @@
 <div class="adventure-trip">
     <div class="container">
         <div class="title">Our <br> Adventure Trip</div>
-        <div class="subtitle">
-            <div class="subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad aliquam dicta
-                doloremque
-                est,
-                excepturi fugit, labore mollitia natus obcaecati officiis perspiciatis quod sed tempore tenetur ullam
-                vel
-                voluptatibus. Ab architecto asperiores autem commodi corporis cupiditate debitis doloremque dolorum
-                eaque
-                earum
-                in incidunt, iure labore libero magnam maiores maxime molestias neque
-            </div>
+        <div class="subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad aliquam dicta
+            doloremque
+            est,
+            excepturi fugit, labore mollitia natus obcaecati officiis perspiciatis quod sed tempore tenetur ullam
+            vel
+            voluptatibus. Ab architecto asperiores autem commodi corporis cupiditate debitis doloremque dolorum
+            eaque
+            earum
+            in incidunt, iure labore libero magnam maiores maxime molestias neque
         </div>
         <div class="video-cover">
             <div class="blackout">
@@ -163,130 +161,127 @@
     </div>
 </div>
 
-<!--<div class="awesome-clients">-->
-<!--    <div class="container">-->
-<!--        <h1>Our <br>Awesome Clients</h1>-->
-<!--        <div class="info-clients">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aspernatur deserunt-->
-<!--            dignissimos ea, earum eos eum ipsam libero nisi, optio pariatur porro quae quam quas qui quibusdam, quos-->
-<!--            repudiandae vel veniam vitae? Culpa error, laboriosam? Aperiam aut consectetur eum quod repellendus. Animi-->
-<!--            aspernatur, aut blanditiis dignissimos-->
-<!--        </div>-->
-<!--        <div class="clients">-->
-<!--            <div class="arrow-clients left">-->
-<!--                <i class="fas fa-angle-left" style="color: white"></i>-->
-<!--            </div>-->
-<!--            <div class="client num1 small"></div>-->
-<!--            <div class="client num2 medium"></div>-->
-<!--            <div class="client num3 big"></div>-->
-<!--            <div class="client num4 medium"></div>-->
-<!--            <div class="client num5 small"></div>-->
-<!--            <div class="arrow-clients right">-->
-<!--                <i class="fas fa-angle-right" style="color: white"></i>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--        <div class="info-client">-->
-<!--            <div class="name-client">Alex Smith</div>-->
-<!--            <div class="review">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur, delectus dicta-->
-<!--                hic-->
-<!--                ipsum laborum libero magnam ratione veritatis vitae voluptates-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</div>-->
 
-<!--<div class="feedback">-->
-<!--    <div class="outdark-feedback">-->
-<!--        <div class="container">-->
-<!--            <div class="input-mail-and-button">-->
-<!--                <div class="block-inp-and-button">-->
-<!--                    <input class="input-email" placeholder="Enter your mail address">-->
-<!--                    <div class="button-book">Book Now</div>-->
-<!--                </div>-->
-<!--                &lt;!&ndash;        <div class="point-texture"></div>&ndash;&gt;-->
-<!--            </div>-->
-<!--            <div class="text-end">START YOUR ADVENTURE WITH US</div>-->
-<!--        </div>-->
+<div class="awesome-clients">
+    <div class="container">
+        <div class="title">Our <br>Awesome Clients</div>
+        <div class="subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aspernatur deserunt
+            dignissimos ea, earum eos eum ipsam libero nisi, optio pariatur porro quae quam quas qui quibusdam, quos
+            repudiandae vel veniam vitae? Culpa error, laboriosam? Aperiam aut consectetur eum quod repellendus. Animi
+            aspernatur, aut blanditiis dignissimos
+        </div>
+        <div class="awesome-clients__slider">
+            <div class="awesome-clients__slider__arrow">
+                <i class="fas fa-angle-left" style="color: white"></i>
+            </div>
+            <div class="awesome-clients__slider__client awesome-clients__slider__client__small img-clients-1"></div>
+            <div class="awesome-clients__slider__client awesome-clients__slider__client__medium img-clients-2"></div>
+            <div class="awesome-clients__slider__client awesome-clients__slider__client__large img-clients-3"></div>
+            <div class="awesome-clients__slider__client awesome-clients__slider__client__medium img-clients-4 "></div>
+            <div class="awesome-clients__slider__client awesome-clients__slider__client__small img-clients-5 "></div>
+            <div class="awesome-clients__slider__arrow">
+                <i class="fas fa-angle-right" style="color: white"></i>
+            </div>
+        </div>
+        <div class="awesome-clients__info">
+            <div class="awesome-clients__info__name">Alex Smith</div>
+            <div class="awesome-clients__info__review">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Consectetur, delectus dicta
+                hic
+                ipsum laborum libero magnam ratione veritatis vitae voluptates
+            </div>
+        </div>
+    </div>
+</div>
 
-<!--    </div>-->
-<!--</div>-->
-<!--<div class="footer">-->
-<!--    <div class="container">-->
-<!--        <div class="left-and-right-path">-->
-<!--            <div class="left-path-footer">-->
-<!--                <div class="logo">advento</div>-->
-<!--                <div class="info-under-logo">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet aspernatur-->
-<!--                    at-->
-<!--                    dolor earum enim eos esse fugit-->
-<!--                </div>-->
-<!--                <div class="info-under-logo">-->
-<!--                    +123 456 789<br>-->
-<!--                    info@advento.com<br>-->
-<!--                    www.advento.com<br>-->
-<!--                </div>-->
-<!--                <div class="icon-social">-->
-<!--                    <i class="fab fa-facebook-f icon"></i>-->
-<!--                    <i class="fab fa-twitter icon"></i>-->
-<!--                    <i class="fab fa-pinterest-p icon"></i>-->
-<!--                    <i class="fab fa-instagram icon"></i>-->
-<!--                    <i class="fab fa-google-plus-g icon"></i>-->
-<!--                </div>-->
-<!--            </div>-->
+<div class="feedback">
+    <div class="feedback__color-back">
+        <div class="container">
+            <div class="email">
+                <input class="email__input" placeholder="Enter your mail address">
+                <div class="email__button">Book Now</div>
+            </div>
+        </div>
+        <div class="text-end">START YOUR ADVENTURE WITH US</div>
+    </div>
+</div>
+</div>
 
-<!--            <div class="right-path-footer">-->
-<!--                <div class="column">-->
-<!--                    <div class="title-footer-right">-->
-<!--                        Activities-->
-<!--                    </div>-->
-<!--                    <div class="items-footer-right">-->
-<!--                        <div class="item-footer">Mountain Biking</div>-->
-<!--                        <br>-->
-<!--                        <div class="item-footer">Hiking</div>-->
-<!--                        <br>-->
-<!--                        <div class="item-footer">Destination</div>-->
-<!--                        <br>-->
-<!--                        <div class="item-footer">Stories</div>-->
-<!--                        <br>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--                <div class="column">-->
-<!--                    <div class="title-footer-right">-->
-<!--                        Booking-->
-<!--                    </div>-->
-<!--                    <div class="items-footer-right">-->
-<!--                        <div class="item-footer">Ticket</div>-->
-<!--                        <br>-->
-<!--                        <div class="item-footer">Travel Product</div>-->
-<!--                        <br>-->
-<!--                        <div class="item-footer">Packages</div>-->
-<!--                        <br>-->
-<!--                        <div class="item-footer">Accommodation</div>-->
-<!--                        <br>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--                <div class="column">-->
-<!--                    <div class="title-footer-right">-->
-<!--                        Contact-->
-<!--                    </div>-->
-<!--                    <div class="items-footer-right">-->
-<!--                        <div class="item-footer">Team</div>-->
-<!--                        <br>-->
-<!--                        <div class="item-footer">Jobs</div>-->
-<!--                        <br>-->
-<!--                        <div class="item-footer">Tourist Office</div>-->
-<!--                        <br>-->
-<!--                        <div class="item-footer">Brochures</div>-->
-<!--                        <br>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
+<div class="footer">
+    <div class="container">
+        <div class="content">
+            <div class="content__left">
+                <div class="content__left__logo">advento</div>
+                <div class="subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet aspernatur
+                    at
+                    dolor earum enim eos esse fugit
+                </div>
+                <div class="subtitle">
+                    +123 456 789<br>
+                    info@advento.com<br>
+                    www.advento.com<br>
+                </div>
+                <div class="content__left__icons">
+                    <i class="content__left__icons__icon fab fa-facebook-f icon"></i>
+                    <i class="content__left__icons__icon fab fa-twitter icon"></i>
+                    <i class="content__left__icons__icon fab fa-pinterest-p icon"></i>
+                    <i class="content__left__icons__icon fab fa-instagram icon"></i>
+                    <i class="content__left__icons__icon fab fa-google-plus-g icon"></i>
+                </div>
+            </div>
 
-<!--        <div class="made"> © All Rights Reserved by ADVENTO | Made with-->
-<!--            <div class="heart"> ♥</div>-->
-<!--            | 2019-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</div>-->
+            <div class="content__right">
+                <div class="content__right__column">
+                    <div class="content__right__column__title">
+                        Activities
+                    </div>
+                    <div class="content__right__column__items">
+                        <div class="content__right__column__items_item">Mountain Biking</div>
+                        <br>
+                        <div class="content__right__column__items_item">Hiking</div>
+                        <br>
+                        <div class="content__right__column__items_item">Destination</div>
+                        <br>
+                        <div class="content__right__column__items_item">Stories</div>
+                        <br>
+                    </div>
+                </div>
+                <div class="content__right__column">
+                    <div class="content__right__column__title">
+                        Booking
+                    </div>
+                    <div class="content__right__column__items">
+                        <div class="content__right__column__items_item">Ticket</div>
+                        <br>
+                        <div class="content__right__column__items_item">Travel Product</div>
+                        <br>
+                        <div class="content__right__column__items_item">Packages</div>
+                        <br>
+                        <div class="content__right__column__items_item">Accommodation</div>
+                        <br>
+                    </div>
+                </div>
+                <div class="content__right__column">
+                    <div class="content__right__column__title">
+                        Contact
+                    </div>
+                    <div class="content__right__column__items">
+                        <div class="content__right__column__items_item">Team</div>
+                        <br>
+                        <div class="content__right__column__items_item">Jobs</div>
+                        <br>
+                        <div class="content__right__column__items_item">Tourist Office</div>
+                        <br>
+                        <div class="content__right__column__items_item">Brochures</div>
+                        <br>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="made"> © All Rights Reserved by ADVENTO | Made with ♥ | 2019</div>
+    </div>
+</div>
 <script src="parallax.js"></script>
 </body>
 </html>
