--- a/index.html
+++ b/index.html
@@ -147,9 +147,9 @@
             in incidunt, iure labore libero magnam maiores maxime molestias neque
         </div>
         <div class="video-cover">
-            <div class="blackout">
-                <div class="circle-play">
-                    <div class="circle-play-two">
+            <div class="video-cover__blackout">
+                <div class="video-cover__blackout__circle-play">
+                    <div class="video-cover__blackout__circle-play__two">
                         <i class="fas fa-play" style="color: #433A8B"></i>
                     </div>
                 </div>
